@@ -416,7 +416,7 @@ typedef enum {
 	FD_CLSID=1,FD_SIZEPOINT=2,FD_ATTRIBUTES=4,FD_CREATETIME=8,FD_ACCESSTIME=16,
 	FD_WRITESTIME=32,FD_FILESIZE=64,FD_LINKUI=0x8000
 } FD_FLAGS;
-typedef struct _FILEDESCRIPTOR {
+typedef struct _FILEDESCRIPTORA {
 	DWORD dwFlags;
 	CLSID clsid;
 	SIZEL sizel;
@@ -428,11 +428,28 @@ typedef struct _FILEDESCRIPTOR {
 	DWORD nFileSizeHigh;
 	DWORD nFileSizeLow;
 	CHAR cFileName[MAX_PATH];
-} FILEDESCRIPTOR,*LPFILEDESCRIPTOR;
-typedef struct _FILEGROUPDESCRIPTOR {
+} FILEDESCRIPTORA,*LPFILEDESCRIPTORA;
+typedef struct _FILEDESCRIPTORW {
+	DWORD dwFlags;
+	CLSID clsid;
+	SIZEL sizel;
+	POINTL pointl;
+	DWORD dwFileAttributes;
+	FILETIME ftCreationTime;
+	FILETIME ftLastAccessTime;
+	FILETIME ftLastWriteTime;
+	DWORD nFileSizeHigh;
+	DWORD nFileSizeLow;
+	WCHAR cFileName[MAX_PATH];
+} FILEDESCRIPTORW,*LPFILEDESCRIPTORW;
+typedef struct _FILEGROUPDESCRIPTORA {
 	UINT cItems;
-	FILEDESCRIPTOR fgd[1];
-} FILEGROUPDESCRIPTOR,*LPFILEGROUPDESCRIPTOR;
+	FILEDESCRIPTORA fgd[1];
+} FILEGROUPDESCRIPTORA,*LPFILEGROUPDESCRIPTORA;
+typedef struct _FILEGROUPDESCRIPTORW {
+	UINT cItems;
+	FILEDESCRIPTORW fgd[1];
+} FILEGROUPDESCRIPTORW,*LPFILEGROUPDESCRIPTORW;
 typedef enum {
 	SLR_NO_UI=1,
 	SLR_ANY_MATCH=2,
@@ -1411,6 +1428,10 @@ typedef BROWSEINFOW BROWSEINFO,*PBROWSEINFO,*LPBROWSEINFO;
 #if (_WIN32_WINNT >= 0x0501)
 #define SHGetFolderPathAndSubDir SHGetFolderPathAndSubDirW
 #endif
+#define FILEDESCRIPTOR FILEDESCRIPTORW
+#define LPFILEDESCRIPTOR LPFILEDESCRIPTORW
+#define FILEGROUPDESCRIPTOR FILEGROUPDESCRIPTORW
+#define LPFILEGROUPDESCRIPTOR LPFILEGROUPDESCRIPTORW
 
 #else
 typedef IShellExecuteHookA IShellExecuteHook;
@@ -1429,6 +1450,10 @@ typedef BROWSEINFOA BROWSEINFO,*PBROWSEINFO,*LPBROWSEINFO;
 #if (_WIN32_WINNT >= 0x0501)
 #define SHGetFolderPathAndSubDir SHGetFolderPathAndSubDirA
 #endif
+#define FILEDESCRIPTOR FILEDESCRIPTORA
+#define LPFILEDESCRIPTOR LPFILEDESCRIPTORA
+#define FILEGROUPDESCRIPTOR FILEGROUPDESCRIPTORA
+#define LPFILEGROUPDESCRIPTOR LPFILEGROUPDESCRIPTORA
 #endif /* UNICODE */
 
 #pragma pack(pop)
