@@ -1,3 +1,8 @@
+2004-07-24  Brodie Thiesfield  <brofield@users.sourceforge.net>
+
+	* include/shlobj.h (FILEDESCRIPTOR): Unicode it.
+	(FILEGROUPDESCRIPTOR): LIkewise.
+
 2004-07-06  Corinna Vinschen  <corinna@vinschen.de>
 
 	* winbase.h (IsWow64Process): Add missing WINAPI qualifier.
